--- a/src/app/components/setting-dialog/setting-dialog.component.scss
+++ b/src/app/components/setting-dialog/setting-dialog.component.scss
@@ -3,3 +3,26 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+.ic-inr {
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    margin-bottom: 4px;
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
