--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,21 @@ html,
 .wrap {
     height: 100%;
 }
+
+.weight-unit {}
+
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
