working on calculation screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,54 @@
 
 <div class="content-section">
     <div class="breakdown">
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
+        <p>Hello</p>
 
     </div>
     <div class="input">
@@ -20,10 +68,10 @@
                 <mat-button-toggle value="s">Silver</mat-button-toggle>
             </mat-button-toggle-group>
             <div style="margin-top: 10px;">
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" class="weight-input">
                     <mat-label>Item weight</mat-label>
-                    <input type="number" matInput placeholder="Item weight in gram" autocomplete="off">
-                    <div class="weight-unit" matSuffix>Gram</div>
+                    <input type="number" matInput placeholder="Enter in gram" autocomplete="off">
+                    <div class="weight-unit" matSuffix>&nbsp; <strong>gm</strong></div>
                 </mat-form-field>
             </div>
 
