--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,23 @@
     flex: 1 1 auto;
 }
 
+.content-section {}
+
+.breakdown {
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 5px;
+    background-color: #f3f3f3;
+    overflow-y: scroll;
+    height: 300px;
+}
+
 .input {
     position: fixed;
     bottom: 0;
-    padding: 20px;
+    padding: 10px 10px 10px 10px;
+    background-color: #ffffff;
+    width: 100%;
 }
 
 body,
@@ -14,7 +27,14 @@ html,
     height: 100%;
 }
 
-.weight-unit {}
+.weight-unit {
+    position: relative;
+    bottom: 4px;
+}
+
+.weight-input {
+    width: 150px;
+}
 
 
 /* Chrome, Safari, Edge, Opera */
