--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,13 @@ html,
     width: 150px;
 }
 
+.ic-inr {
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    margin-bottom: 4px;
+}
+
 
 /* Chrome, Safari, Edge, Opera */
 
